Home-Seite geändert

--- a/RSSFeed/app/views/showFeeds.scala.html
+++ b/RSSFeed/app/views/showFeeds.scala.html
@@ -16,9 +16,8 @@
       <div id="menu">
          <div id="menu-left"></div>
          <ul>
-            <li><a href="start"><span>home</span></a></li>
-            <li><a href="user_profile"><span>user profile</span></a></li>
-            <li><a class="current" href="#"><span>show_Feeds</span></a></li>
+            <li><a class="current" href="start"><span>home</span></a></li>
+            <li><a href="userprofile"><span>user profile</span></a></li>
             <li><a href=about#"><span>about us</span></a></li>
             <li><a href="out"><span>log out</span></a></li>
          </ul>
