login und passwort

--- a/RSSFeed/app/views/Hauptseite.scala.html
+++ b/RSSFeed/app/views/Hauptseite.scala.html
@@ -28,12 +28,12 @@
 			<h1><font size="4">LOG IN</font></h1>
 			<form action="input_text.htm">				
 				<p>e-mail<br><input name="e-mail" type="text" size="30" maxlength="40"></p>
-				<p>password<br><input name="password" type="text" size="30" maxlength="40"></p>
+				<p>password<br><input name="password" type="password" size="30" maxlength="40"></p>
 			</form>	
 			
-			<form action="input_button.htm">
+			<form action="http://localhost:9000/userprofile" method="get">
 			  <p>
-				<input type="button" name="log in" value="log in">
+				<input type="submit" name="log in" value="log in" >
 			  </p>
 			</form>
 			
